added 2 advertisements to the project

--- a/Public_KINOPOISK/kinopoisk.html
+++ b/Public_KINOPOISK/kinopoisk.html
@@ -1,18 +1,31 @@
-<l lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-        <meta charset= "UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device=width, initial-scale=1.0">
-        <title>kinopoisk</title>
-        <link re!DOCTYPE html>
-    <html="stylesheet" href="./index.css" type="text/css">
+    <meta charset= "UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device=width, initial-scale=1.0">
+    <title>kinopoisk</title>
+    <link rel="stylesheet" href="./kinopoisk.css" type="text/css">
 </head>
 <body>
     <main>
-        <div class="picture1">
-            <a href=""><img src="kino1.png" alt=""></a>
+        <div class="advertisement">
+            <a href=""><img src="hbkino.png" alt="" height="223px" width="1285px"></a>
         </div>
-        
+        <div class="chubacca">
+            <a href=""><img src="kino1.png" class="picture1" alt="" height="400px" width="940px"></a>
+        </div>
+        <div>
+            <a href="">Билеты в Кино</a>
+        </div>
+
+        <div class="movies_container">
+            <div class="movies">
+                <div class="movies_item">
+
+                </div>
+            </div>
+        </div>
     </main>
      
 </body>
