added pictures to the site

--- a/Public_KINOPOISK/kinopoisk.html
+++ b/Public_KINOPOISK/kinopoisk.html
@@ -8,23 +8,56 @@
     <link rel="stylesheet" href="./kinopoisk.css" type="text/css">
 </head>
 <body>
+    <div id="left"></div>
+    <div id="right"></div>
     <main>
         <div class="advertisement">
-            <a href=""><img src="hbkino.png" alt="" height="223px" width="1285px"></a>
+            <a href=""><img src="hbkino.png" alt="реклама" height="223px" width="1285px"></a>
+            <button>За подарками!</button>
         </div>
         <div class="chubacca">
-            <a href=""><img src="kino1.png" class="picture1" alt="" height="400px" width="940px"></a>
+            <a href=""><img src=  alt="трейлер" height="400px" width="940px"></a>
         </div>
-        <div>
-            <a href="">Билеты в Кино</a>
+        <div class="tickets">
+            <a href="">Билеты в Кино 127> </a>
         </div>
 
         <div class="movies_container">
-            <div class="movies">
                 <div class="movies_item">
+                    <div>
+                       <a href=""><img src="movie12.webp" style="border-radius: 5px;" alt=""></a>
+                       <h1>Вечные</h1>
+                       <p>2021, фантастика</p>
+                    </div>
 
+                    <div>
+                        <a href=""><img src="gifka.png" style="border-radius: 5px;" height="210" width="140" alt="" ></a>
+                    </div>
+
+                    <div>
+                        <a href=""><img src="movie8.webp" style="border-radius: 5px;" alt=""></a>
+                        <h1>Кощей.начало</h1>
+                        <p>2021, мультфильм</p>
+                    </div>
+
+                    <div>
+                        <a href=""><img src="movie11.webp" style="border-radius: 5px;" alt=""></a> 
+                        <h1>Неисправимый Рон</h1>
+                        <p>2021, мультфильм</p> 
+                    </div>
+
+                    <div>
+                       <a href=""><img src="movie10.webp" style="border-radius: 5px;" alt=""></a>
+                       <h1>Веном 2</h1>
+                       <p>2021, фантастика</p>
+                    </div>
+
+                    <div>
+                        <a href=""><img src="movie13.webp" style="border-radius: 5px;" alt=""></a>
+                        <h1>Дюна</h1>
+                       <p>2021, фантастика</p>
+                    </div>
                 </div>
-            </div>
         </div>
     </main>
      
