added final changes

--- a/Public_kino/kinopoisk.html
+++ b/Public_kino/kinopoisk.html
@@ -13,19 +13,18 @@
     <main>
         <div class="advertisement">
             <a href=""><img src="hbkino.png" alt="реклама" height="223px" width="1285px"></a>
-            <button>За подарками!</button>
         </div>
-        <div class="chubacca">
-            <a href=""><img src=  alt="трейлер" height="400px" width="940px"></a>
+        <div class="familybudget">
+            <a href="" class="familybudget101"><img src="familybudget.png" style="border-radius:5px" 
+                height="400px" width="940px" alt=""></a>
         </div>
         <div class="tickets">
-            <a href="">Билеты в Кино 127> </a>
+            <a href="" style="color: black;">Билеты в Кино 127> </a>
         </div>
-
-        <div class="movies_container">
-                <div class="movies_item">
+        <div>
+              <div class="movies_item">
                     <div>
-                       <a href=""><img src="movie12.webp" style="border-radius: 5px;" alt=""></a>
+                       <a href=""><img src="movie12.webp" style="border-radius: 5px;" height="210" width="140" alt=""></a>
                        <h1>Вечные</h1>
                        <p>2021, фантастика</p>
                     </div>
@@ -35,30 +34,53 @@
                     </div>
 
                     <div>
-                        <a href=""><img src="movie8.webp" style="border-radius: 5px;" alt=""></a>
-                        <h1>Кощей.начало</h1>
+                        <a href=""><img src="movie8.webp" style="border-radius: 5px;" height="210" width="140" alt=""></a>
+                        <h1>Кощей.Начало</h1>
                         <p>2021, мультфильм</p>
                     </div>
 
                     <div>
-                        <a href=""><img src="movie11.webp" style="border-radius: 5px;" alt=""></a> 
+                        <a href=""><img src="movie11.webp" style="border-radius: 5px;" height="210" width="140" alt=""></a> 
                         <h1>Неисправимый Рон</h1>
                         <p>2021, мультфильм</p> 
                     </div>
 
                     <div>
-                       <a href=""><img src="movie10.webp" style="border-radius: 5px;" alt=""></a>
+                       <a href=""><img src="movie10.webp" style="border-radius: 5px;" height="210" width="140" alt=""></a>
                        <h1>Веном 2</h1>
                        <p>2021, фантастика</p>
                     </div>
 
                     <div>
-                        <a href=""><img src="movie13.webp" style="border-radius: 5px;" alt=""></a>
+                        <a href=""><img src="movie13.webp" style="border-radius: 5px;" height="210" width="140" alt=""></a>
                         <h1>Дюна</h1>
                        <p>2021, фантастика</p>
                     </div>
                 </div>
-        </div> 
+            </div> 
+       <div class="redactor">
+           <p>Выбор редакции</p>
+       </div>
+
+        <div class="reccomendations_item">
+
+            <div>
+            <a href=""><img src="pic4.webp" alt=""></a>
+            </div>
+            
+            <div>
+            <a href=""><img src="pic2.webp" alt=""></a>
+            </div>
+
+            <div>
+            <a href=""><img src="pic1.webp" alt=""></a>
+            </div>
+
+            <div>
+            <a href=""><img src="pic3.webp" alt=""></a>
+            </div>
+
+        </div>
     </main>
      
 </body>
